change font/color, fix page spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,17 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: 0 0 0;
-  --foreground: 255 255 255;
-  --accent: 128 128 128;
-  --icon-color: 155, 81, 224;
-  --grid-size: 20px;
-  --grid-color: rgba(255, 255, 255, 0.05);
-}
+/* :root { */
+/*   --background: 0 0 0; */
+/*   --foreground: 255 255 255; */
+/*   --accent: 128 128 128; */
+/*   --icon-color: 155, 81, 224; */
+/*   --grid-size: 20px; */
+/*   --grid-color: rgba(255, 255, 255, 0.05); */
+/* } */
 
 @layer base {
   :root {
@@ -60,6 +61,8 @@
     --sidebar-accent-foreground: 240 5.9% 10%; /* Near black */
     --sidebar-border: 220 13% 91%; /* Light gray */
     --sidebar-ring: 270 50% 50%; /* Matching primary purple */
+    --grid-size: 20px;
+    --grid-color: rgba(255, 255, 255, 0.05);
   }
 
   .dark {
@@ -252,4 +255,11 @@ body {
   :root {
     --grid-size: 60px;
   }
+}
+
+.geist-<uniquifier > {
+  font-family: "Geist", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
 }
